Servicio para crear viajes #12796970696444
Diego

--- a/app/views/rides/_form.html.erb
+++ b/app/views/rides/_form.html.erb
@@ -20,8 +20,8 @@
     <%= f.number_field :user_id %>
   </div>
   <div class="field">
-    <%= f.label :when %><br>
-    <%= f.datetime_select :when %>
+    <%= f.label :ride_when %><br>
+    <%= f.datetime_select :ride_when %>
   </div>
   <div class="field">
     <%= f.label :origin %><br>
