--- a/app/views/rides/index.html.erb
+++ b/app/views/rides/index.html.erb
@@ -20,7 +20,7 @@
       <tr>
         <td><%= ride.agreement_id %></td>
         <td><%= ride.user_id %></td>
-        <td><%= ride.when %></td>
+        <td><%= ride.ride_when %></td>
         <td><%= ride.origin %></td>
         <td><%= ride.destination %></td>
         <td><%= ride.cost %></td>
