--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,5 +1,5 @@
-<p>Welcome <%= @email %>!</p>
+<p>Bienvenido al Automóvil Club de Colombia <%= @email %>!</p>
 
-<p>You can confirm your account email through the link below:</p>
+<p>Para activar tu cuenta solamente da click en la liga que aparece a continuación:</p>
 
-<p><%= link_to 'Confirm my account', confirmation_url(@resource, confirmation_token: @token) %></p>
+<p><%= link_to 'Activar mi cuenta', confirmation_url(@resource, confirmation_token: @token) %></p>
