Hash para viajes disponibles #13433714832883 Cambios a lógica de recuperar contraseña #13181917864467 Reenviar confirmación #13458129391579 Estandarización de responses JSON
Diego

--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,5 +1,5 @@
-<p>Bienvenido al Automóvil Club de Colombia <%= @email %>!</p>
+<p>¡Bienvenido al Automóvil Club de Colombia <%= @resource.first_name %>!</p>
 
-<p>Para activar tu cuenta solamente da click en la liga que aparece a continuación:</p>
+<p>Para activar tu cuenta solamente haz click en la liga que aparece a continuación:</p>
 
 <p><%= link_to 'Activar mi cuenta', confirmation_url(@resource, confirmation_token: @token) %></p>
