--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,8 @@
-<p>Hello <%= @resource.email %>!</p>
+<p>¡Hola <%= @resource.first_name %>!</p>
 
-<p>Someone has requested a link to change your password. You can do this through the link below.</p>
+<p>Has solicitado cambiar tu contraseña. Haz click en la liga que aparece a continuación para cambiar tu contraseña:</p>
 
-<p><%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token) %></p>
+<p><%= link_to 'Cambiar mi contraseña', edit_password_url(@resource, reset_password_token: @token) %></p>
 
-<p>If you didn't request this, please ignore this email.</p>
-<p>Your password won't change until you access the link above and create a new one.</p>
+<p>Si no solicitaste este cambio, ignora este correo.</p>
+<p>Tu contraseña no cambiará hasta que hagas click en la liga y elijas una nueva.</p>
