--- a/app/views/agreements/_form.html.erb
+++ b/app/views/agreements/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@agreement) do |f| %>
+<%= form_for @agreement, :html => { :multipart => true } do |f| %>
   <% if @agreement.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@agreement.errors.count, "error") %> prohibited this agreement from being saved:</h2>
@@ -21,7 +21,7 @@
   </div>
   <div class="field">
     <%= f.label :logo %><br>
-    <%= f.text_field :logo %>
+    <%= f.file_field :logo %>
   </div>
   <div class="field">
     <%= f.label :active %><br>
