--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,9 @@
-<p>¡Hola <%= @resource.first_name %>!</p>
+<p><%= @resource.first_name %>,</p>
 
-<p>Has solicitado cambiar tu contraseña. Haz click en la liga que aparece a continuación para cambiar tu contraseña:</p>
+<p>Hemos recibido una petición para restablecer la contraseña de tu cuenta Carpooling Automóvil Club de Colombia.</p>
+<p>Si hiciste esta petición, haz clic en el botón de abajo. Si no hiciste esta petición, puedes ignorar este correo.</p>
 
-<p><%= link_to 'Cambiar mi contraseña', edit_password_url(@resource, reset_password_token: @token) %></p>
-
-<p>Si no solicitaste este cambio, ignora este correo.</p>
-<p>Tu contraseña no cambiará hasta que hagas click en la liga y elijas una nueva.</p>
+<p><%= link_to 'Restablecer tu contraseña', edit_password_url(@resource, reset_password_token: @token) %></p>
+<p> O usa este enlace para restablecer tu contraseña: <br/>
+	<%= link_to edit_password_url(@resource, reset_password_token: @token), edit_password_url(@resource, reset_password_token: @token)%>
+</p>
