Agregadas tareas de administrador.
Agreements, Leads, Rides, Roadside Assistances, Users

--- a/app/assets/stylesheets/active_admin.css.scss
+++ b/app/assets/stylesheets/active_admin.css.scss
@@ -15,3 +15,17 @@
 // For example, to change the default status-tag color:
 //
 //   .status_tag { background: #6090DB; }
+
+.photo_thumb {
+}
+
+.photo_thumb img{
+	height: 120px;
+}
+
+.photo_medium {
+}
+
+.photo_medium img{
+	height: 240px;
+}
