Carpooling: Cambiar textos (mailer y devise) #17177743706983
Diego

--- a/app/views/confirmations/show.html.erb
+++ b/app/views/confirmations/show.html.erb
@@ -1,6 +1,6 @@
-<h2>Carpooling Automóvil Club de Colombia</h2>
+<h2>Carro Compartido Touring & Automóvil Club de Colombia</h2>
 <% if @success %>
-	<p> ¡Bienvenido(a) a la comunidad de Carpooling Automóvil Club de Colombia! </p>
+	<p> ¡Bienvenido(a) a la comunidad de Carro Compartido Touring & Automóvil Club de Colombia! </p>
 	<p> Te queremos dar la bienvenida y esperamos que disfrutes de esta comunidad. </p>
 	<p> Muchas gracias, </p>
 	<p> Touring & Automóvil Club de Colombia </p>
