--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,6 +1,6 @@
 <p><%= @resource.first_name %>,</p>
 
-<p>Hemos recibido una petición para restablecer la contraseña de tu cuenta Carpooling Automóvil Club de Colombia.</p>
+<p>Hemos recibido una petición para restablecer la contraseña de tu cuenta Carro Compartido Touring & Automóvil Club de Colombia.</p>
 <p>Si hiciste esta petición, haz clic en el botón de abajo. Si no hiciste esta petición, puedes ignorar este correo.</p>
 
 <p><%= link_to 'Restablecer tu contraseña', edit_password_url(@resource, reset_password_token: @token) %></p>
