--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,6 +1,6 @@
 <p>Hola <%= @resource.first_name %>:</p>
 
-<p>¡Bienvenido(a) a la comunidad de Carpooling Automóvil Club de Colombia!</p>
+<p>¡Bienvenido(a) a la comunidad de Carro Compartido Touring & Automóvil Club de Colombia!</p>
 <p> Para activar tu cuenta haz click en el siguiente enlace:</p>
 
 <p><%= link_to 'Activar registro', confirmation_url(@resource, confirmation_token: @token) %></p>
